<resources>
    <string name="app_name" translatable="false">RL BDM</string>
    <string name="helper_text" translatable="false">hello there 👋 if you have any questions. i\'m here to help.</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Consumer">RL BDM</string>
    <string name="Login">Login</string>
    <string name="Sign_in_to_continue">Sign in to continue</string>
    <string name="User_Id">User Id</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Forgot_Password">Forgot Password ?</string>
    <string name="New_User">New User?</string>
    <string name="Sign_Up"> Sign Up</string>
    <string name="Customer">Customer</string>
    <string name="Mobile_Number">Mobile Number</string>

    <!--    Register-->
    <string name="Register">Register</string>
    <string name="Referral_Code">Referral Code</string>
    <string name="Enter_First_Name">Enter Full Name</string>
    <string name="Enter_Father_Name">Enter Father Name</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="Enter_Mobile_No">Enter Mobile Number</string>
    <string name="Enter_Address">Enter Address</string>
    <string name="Enter_Adhar">Enter Adhar number</string>
    <string name="Select_Occupation">Select Salary Type</string>
    <string name="Occupational_Experience">Occupational Experience</string>
    <string name="Select_Contract_Type">Select Contract Type</string>
    <string name="Adhar_Front_Side">Adhar Front Side</string>
    <string name="Adhar_Back_Side">Adhar Back Side</string>
    <string name="Enter_Pincode">Enter Pincode</string>
    <string name="Already_have_Account">Already have an Account?</string>

    <!--    forgot password-->
    <string name="Forgot">Forgot</string>
    <string name="password">Password</string>
    <string name="Please_enter_register_email_id">Please enter register email id here.</string>
    <string name="Submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>