<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_register_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CDFFF8F6"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgLanguage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/img_language_icon"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Consumer"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/rl_blue"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Register"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold"/>


                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_First_Name"
                    style="@style/OutlinedBoxStyle"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/user"
                    app:startIconTint="@color/rl_blue"
                    android:layout_marginTop="5dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtFirstName"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Father_Name"
                    style="@style/OutlinedBoxStyle"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/user"
                    app:startIconTint="@color/rl_blue"
                    android:layout_marginTop="5dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtFatherName"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Email"
                    style="@style/OutlinedBoxStyle"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/rl_blue"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtEmail"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Mobile_No"
                    style="@style/OutlinedBoxStyle"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:startIconTint="@color/rl_blue"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtPhone"
                        android:textColor="@color/black"
                        android:inputType="phone"

                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Address"
                    style="@style/OutlinedBoxStyle"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/baseline_apartment_24"
                    app:startIconTint="@color/rl_blue"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAddress"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Adhar"
                    style="@style/OutlinedBoxStyle"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/user"
                    app:startIconTint="@color/rl_blue"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAdhar"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Pincode"
                    style="@style/OutlinedBoxStyle"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/baseline_apartment_24"
                    app:startIconTint="@color/rl_blue"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtPin"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Password"
                    style="@style/OutlinedBoxStyle"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:startIconTint="@color/rl_blue"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtPassword"
                        android:textColor="@color/black"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Select_Occupation"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/spSalaryType"
                    android:background="@drawable/drop_down_shape"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/CheckTermCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Term and Condition"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_light"
                        android:checked="false"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=" (View)"
                        android:textColor="@color/rl_blue"
                        android:id="@+id/tvView"
                        android:fontFamily="@font/poppins_medium"/>
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btCostRegister"
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Register"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@drawable/shape_button" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:id="@+id/rlLogin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Already_have_Account"
                        android:fontFamily="@font/poppins_regular"
                        android:id="@+id/txt"
                        android:textSize="16sp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/text_color_gray"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Login"
                        android:layout_toRightOf="@id/txt"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="@font/poppins_medium"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>



    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCFFFFFF"
        android:visibility="gone"
        android:id="@+id/rlLoader"
        android:elevation="50dp">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/gif_loader"
            android:adjustViewBounds="true"
            android:id="@+id/rlGif"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/tvText"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading Please Wait!"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/tvText"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


</RelativeLayout>